--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,3 +1,4 @@
+require: rubocop-rails
 AllCops:
   NewCops: enable
   Exclude:
@@ -6,3 +7,70 @@ AllCops:
     - 'db/**/*'
     - 'bin/**/*'
     - 'config/**/*'
+    # Template naturally long
+    - 'app/lib/mods_builder.rb'
+Lint/MissingSuper:
+  Exclude:
+    - 'app/services/**/*'
+Metrics/ClassLength:
+  Max: 120
+Metrics/AbcSize:
+  Max: 20
+  Exclude:
+    - 'app/decorators/*'
+    - 'app/lib/mods_decoration.rb'
+    - 'app/services/**/*'
+    # Nature of object conversion, lots of assignment
+    - 'app/lib/mods_to_json.rb'
+Metrics/CyclomaticComplexity:
+  Exclude:
+    - 'app/decorators/*'
+Metrics/PerceivedComplexity:
+  Exclude:
+    - 'app/decorators/*'
+Lint/AmbiguousBlockAssociation:
+  Enabled: false
+Rails/FindEach:
+  Enabled: false
+Rails/I18nLocaleTexts:
+  Enabled: false
+Style/Documentation:
+  Enabled: false
+Layout/LineLength:
+  Max: 120
+  Include:
+    - 'app/**/*'
+Metrics/MethodLength:
+  Max: 15
+  AllowedMethods: ['role_permissions', 'convert_xml_to_json']
+Metrics/BlockLength:
+  Exclude:
+    # BL config too long
+    - 'app/controllers/catalog_controller.rb'
+    - 'spec/**/*'
+    - 'lib/tasks/*'
+Rails/UnknownEnv:
+  Environments:
+    - production
+    - development
+    - test
+    - staging
+Rails/DynamicFindBy:
+  Whitelist:
+    - find_by_alternate_identifier
+Layout/IndentationConsistency:
+  EnforcedStyle: indented_internal_methods
+Style/MissingRespondToMissing:
+  Enabled: false
+Style/HashEachMethods:
+  Enabled: true
+Style/HashTransformKeys:
+  Enabled: true
+Style/HashTransformValues:
+  Enabled: true
+Naming/VariableNumber:
+  Enabled: false
+Lint/EmptyBlock:
+  Enabled: false
+Lint/ConstantDefinitionInBlock:
+  Enabled: false
