--- a/config/valkyrie.yml
+++ b/config/valkyrie.yml
@@ -8,7 +8,7 @@ staging:
 
 test:
   metadata_adapter: postgres
-  storage_adapter: disk
+  storage_adapter: test_disk
 
 production:
   metadata_adapter: postgres
