Adding and using the memory adapter

--- a/config/valkyrie.yml
+++ b/config/valkyrie.yml
@@ -7,7 +7,7 @@ staging:
   storage_adapter: disk
 
 test:
-  metadata_adapter: postgres
+  metadata_adapter: memory
   storage_adapter: test_disk
 
 production:
