Switch to composite persister

--- a/.dockerignore
+++ b/.dockerignore
@@ -25,6 +25,14 @@ docs
 # Ignore master key for decrypting credentials and more.
 config/master.key
 
+# Node modules, yarn etc.
+public/packs
+public/packs-test
+node_modules
+yarn-error.log
+yarn-debug.log*
+.yarn-integrity
+
 # Ignore environment files
 *.env
 
