--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.7'
 volumes:
   db:
   storage:
+  solr:
 services:
   db:
     image: postgres:14
@@ -19,3 +20,19 @@ services:
     entrypoint: /home/atlas/web/docker-entrypoint.sh
     ports:
       - 3000:3000
+  solr:
+    image: nakatomi/blacklight-solr
+    ports:
+    - 8983:8983
+    volumes:
+    - solr:/opt/solr/server/solr/mycores/blacklight-core/data
+    healthcheck:
+      test:
+      - CMD
+      - wget
+      - "-O"
+      - "/dev/null"
+      - http://localhost:8983/solr/
+      interval: 30s
+      timeout: 5s
+      retries: 3
