--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -40,6 +40,10 @@ jobs:
         docker-compose exec -T web bundle exec rake db:migrate
     - name: Wait until available
       run: dockerize -wait http://localhost:3000 -timeout 1m
+    - name: Push the Docker image
+      run: |
+        echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
+        docker push nakatomi/atlas_web:$(cat .version)
     # - name: Run tests
     #   run: |
     #     docker-compose exec -T web cc-test-reporter before-build
