--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -40,10 +40,10 @@ jobs:
         docker-compose exec -T web bundle exec rake db:migrate
     - name: Wait until available
       run: dockerize -wait http://localhost:3000 -timeout 1m
-    - uses: azure/container-actions/docker-securelogin@master
+    - uses: docker/login-action@v3
       with:
-        username: '${{ secrets.DOCKERHUB_USERNAME }}'
-        password: '${{ secrets.DOCKERHUB_PASSWORD }}'
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Push the Docker image
       run: |
         docker push nakatomi/atlas_web:$(cat .version)
