--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -43,7 +43,7 @@ jobs:
     - uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+        password: ${{ secrets.DOCKERHUB_PASSWORD }}
     - name: Push the Docker image
       run: |
         docker push nakatomi/atlas_web:$(cat .version)
